--- a/ChaosMod.vcxproj
+++ b/ChaosMod.vcxproj
@@ -27,6 +27,7 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Misc\config.cpp" />
     <ClCompile Include="src\Misc\menu.cpp" />
+    <ClCompile Include="src\Misc\soundmanager.cpp" />
     <ClCompile Include="src\script.cpp" />
     <ClCompile Include="src\server.cpp" />
   </ItemGroup>
@@ -43,6 +44,7 @@
     <ClInclude Include="src\Effects\vehs.h" />
     <ClInclude Include="src\Misc\config.h" />
     <ClInclude Include="src\Misc\menu.h" />
+    <ClInclude Include="src\Misc\soundmanager.h" />
     <ClInclude Include="src\pch.h" />
     <ClInclude Include="src\script.h" />
     <ClInclude Include="src\server.h" />
@@ -174,7 +176,7 @@
       <PrecompiledHeader>
       </PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>thirdparty\asio\asio\include;thirdparty\rapidjson\include;thirdparty\websocketpp;thirdparty\rdr2_sdk\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>thirdparty\asio\asio\include;thirdparty\rapidjson\include;thirdparty\websocketpp;thirdparty\rdr2_sdk\inc;thirdparty\sfml\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
@@ -183,8 +185,8 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>false</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
-      <AdditionalLibraryDirectories>thirdparty\rdr2_sdk\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>ScriptHookRDR2.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>thirdparty\rdr2_sdk\lib;thirdparty\sfml\extlibs\libs-msvc-universal\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>ScriptHookRDR2.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;sfml-graphics-d.lib;sfml-window.lib;sfml-system.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
